# calculation-package

./: README.md  calc-script.py  setup.cfg
calculations/: absolute.py  addition.py  floor.py  power.py
