[metadata]
name = calculation-package-marieengel
version = 0.0.1
author = Marie Engel
author_email = marieengel@deliveryhero.com
description = A small package for simple calculations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marieengel/calculation-package
project_urls =
    Bug Tracker = https://github.com/marieengel/calculation-package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = calculations
packages = find:
python_requires = >=3.6

[options.packages.find]
where = calculations